--- a/index.html
+++ b/index.html
@@ -28,7 +28,17 @@
 
           <!-- Project 1 -->
           <section class="project-item">
-            <img src="Images/react.png" alt="Lynda & LinkedIn Learning course list">
+            <img src="Images/react.png" alt="Fashion Point Web Application">
+            <h3>Coronavirus Latest Updates</h3>
+            <p>Created React based Coronavirus Web application for forecasting current trends of Covid-19 cases around the globe.</p>
+            <a class="btn" href="http://akshay-panchal.cf/" target="_blank">Live Link</a>
+            <a class="btn" href="https://github.com/akshaypanchal/Portfolio_Project" target="_blank">Source Code</a>
+          </section>
+          
+         
+          <!-- Project 1 -->
+          <section class="project-item">
+            <img src="Images/react.png" alt="Fashion Point Web Application">
             <h3>Fashion Point</h3>
             <p>Currently working on an online e-commerce website for fashionable outfits for men and women using the
             technologies such as React, GraphQL and Firebase.</p>
@@ -38,7 +48,7 @@
 
           <!-- Project 2 -->
           <section class="project-item">
-            <img src="Images/react.png" alt="Women and Tech website">
+            <img src="Images/react.png" alt="Smart Brain Web Application">
             <h3>SmartBrain</h3>
             <p>Deployed React based Web Application integrated with the Clarifai Face Detection API on Heroku Server 
             for the purpose to fint out either the particular image on the internet have the human face in it or not?</p>
@@ -48,7 +58,7 @@
 
           <!-- Project 3 -->
           <section class="project-item">
-            <img src="Images/react.png" alt="The Wire Ipsum website">
+            <img src="Images/react.png" alt="Weather Forecast Web Application">
             <h3>Weather Update</h3>
             <p>Deployed React based application on Heroku Server which tell the user the live forcast data of different cities in the world using OpenWeatherMap API.</p>
             <p>Created the portfolio using techonologies such as React, Bootstrap to show case personal progress in web development field with bunch of self made projects.</p>
@@ -58,7 +68,7 @@
 
           <!-- Project 4 -->
            <section class="project-item">
-            <img src="Images/react.png" alt="The Wire Ipsum website">
+            <img src="Images/react.png" alt="React based Web Portfolio">
             <h3>Portfolio Website (React Based)</h3>
             <p>Created the portfolio using techonologies such as React, Bootstrap to show case personal progress in web development field with bunch of self made projects.</p>
             <a class="btn" href="https://akshaypanchal-88c5a.firebaseapp.com/" target="_blank">Live Link</a>
