Change some design in project section.

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
             <img src="Images/react.png" alt="Fashion Point Web Application">
             <h3>Coronavirus Latest Updates</h3>
             <p>Created React based Coronavirus Web application for forecasting current trends of Covid-19 cases around the globe.</p>
-            <a class="btn" href="http://akshay-panchal.cf/" target="_blank">Live Link</a>
+            <a class="btn" href="https://coronavirus-updates.netlify.app/" target="_blank">Live Link</a>
             <a class="btn" href="https://github.com/akshaypanchal/Portfolio_Project" target="_blank">Source Code</a>
           </section>
           
          
-          <!-- Project 1 -->
+          <!-- Project 2 -->
           <section class="project-item">
             <img src="Images/react.png" alt="Fashion Point Web Application">
             <h3>Fashion Point</h3>
@@ -46,7 +46,7 @@
             <a class="btn" href="https://github.com/akshaypanchal/fashion-point" target="_blank">Source Code</a>
           </section>
 
-          <!-- Project 2 -->
+          <!-- Project 3 -->
           <section class="project-item">
             <img src="Images/react.png" alt="Smart Brain Web Application">
             <h3>SmartBrain</h3>
@@ -56,7 +56,7 @@
             <a class="btn" href="https://github.com/akshaypanchal/SmartBrain---Front-End" target="_blank">Source Code</a>
           </section>
 
-          <!-- Project 3 -->
+          <!-- Project 4 -->
           <section class="project-item">
             <img src="Images/react.png" alt="Weather Forecast Web Application">
             <h3>Weather Update</h3>
@@ -66,7 +66,7 @@
             <a class="btn" href="https://github.com/akshaypanchal/Weather_Update" target="_blank">Source Code</a>
           </section>
 
-          <!-- Project 4 -->
+          <!-- Project 5 -->
            <section class="project-item">
             <img src="Images/react.png" alt="React based Web Portfolio">
             <h3>Portfolio Website (React Based)</h3>
